Before review and rate

--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -4,3 +4,11 @@
 .checkout span{
     color:red;
 }
+footer a{
+    text-decoration: none;
+    color: #7C7C7C;
+}
+footer a:hover{
+    text-decoration: none;
+    color: beige;
+}
