--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -61,6 +61,9 @@ footer a:hover{
   transform: scale(1.05);
 
 }
+.prod_img img{
+  object-fit: cover;
+}
 .card s{
   float: right;
 }
@@ -73,3 +76,23 @@ footer a:hover{
   z-index: 3500 !important;
 }
 
+.fontuser {
+  position: relative;
+}
+
+.fontuser i{
+  position: absolute;
+  left: 10px;
+  top: 11px;
+  color: #000;
+}
+.fontpass {
+  position: relative;
+}
+
+.fontpass i{
+  position: absolute;
+  left: 10px;
+  top: 11px;
+  color: #000;
+}
