--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -96,3 +96,22 @@ footer a:hover{
   top: 11px;
   color: #000;
 }
+.rec{
+  background: linear-gradient(
+    to right,#833ab4,
+    #fd1d2d,#dcbe15);
+    background-size: 400% 400%;
+  animation: animate-background 10s infinite ease-in-out;
+
+}
+@keyframes animate-background {
+  0%{
+    background-position: 0 50%;
+  }
+  50%{
+    background-position: 100% 50%;
+  }
+  100%{
+    background-position: 0 50%;
+  }
+}
